# secunda

./: .gitignore  AGENTS.md  README.md  skills-lock.json
payment-service/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
payment-service/alembic/: env.py
payment-service/alembic/versions/: 001_create_tables.py
payment-service/app/: config.py  main.py
payment-service/app/api/: dependencies.py
payment-service/app/consumer/: __init__.py  payment_handler.py
payment-service/app/db/: __init__.py  base.py  session.py
payment-service/app/middleware/: __init__.py  auth.py
payment-service/app/models/: __init__.py  outbox.py  payment.py
payment-service/app/repositories/: __init__.py  outbox_repository.py  payment_repository.py
payment-service/app/schemas/: __init__.py  payment.py
payment-service/app/services/: __init__.py  outbox_service.py  payment_processor.py  payment_service.py  webhook_client.py
payment-service/app/tasks/: __init__.py  outbox_publisher.py
payment-service/docs/guides/: API.md  ARCHITECTURE.md  TECHNICAL_DECISIONS.md  TESTING.md
payment-service/scripts/: clean.sh  init.sh  logs.sh  run-tests.sh  setup_rabbitmq.sh  test-e2e.sh  test_consumer.py
payment-service/tests/: conftest.py
payment-service/tests/e2e/: test_payment_flow.py
payment-service/tests/integration/: test_api.py
payment-service/tests/unit/: test_middleware.py  test_models.py  test_outbox_service.py  test_repositories.py  test_services.py  test_webhook_client.py
(+16 files in other folders)
